# edc-test-settings

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg
.github/workflows/: build.yml
src/edc_test_settings/: default_test_settings.py  func_main.py
tests/: test_settings.py
