[project]
name = "edc-test-settings"
dynamic = ["version"]
description = "Class and functions for tests for clinicedc/edc projects"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ['Django', 'clinicedc', 'tests']
authors = [{name="Erik van Widenfelt", email="ew2789@gmail.com"}]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = '>=3.12'

[project.urls]
Homepage = "https://github.com/clinicedc/edc_test_settings"
Documentation = "https://github.com/clinicedc/edc_test_settings/blob/README.rst"
Repository = "https://github.com/clinicedc/edc_test_settings.git"
Changelog = "https://github.com/clinicedc/edc_test_settings/blob/main/CHANGES"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations", "_version.py"]
